# internal/domain/entity/auth.go
@@ -1,6 +1,0 @@
-package entity
-
-type AuthenticationInput struct {
-	Username string `json:"username" binding:"required"`
-	Password string `json:"password" binding:"required"`
-}
