# pkg/response/jwt.go
@@ -1,0 +1,9 @@
+package response
+
+type JwtReponse struct {
+	Jwt string
+}
+
+func (r *JwtReponse) String() string {
+	return r.Jwt
+}
